# weaviate-text-demo

./: .gitignore  README.md  docker-compose-milvus.yml  docker-compose-weaviate.yml  pyproject.toml
ai_text_demo/: constants.py
ai_text_demo/chatpdf/: chat_with_pdf.py  upload_pdf.py
ai_text_demo/ingesting_pdf/: 01_insert_data.py  02_queries.py  abstract_extractor.py  chatbot_server.py
ai_text_demo/langchain_chatbots/: chat.py
ai_text_demo/langchain_cite_sources/: main.py
ai_text_demo/langchain_llm_vs_chat_models/: llm.py
ai_text_demo/langchain_question_answering/: qa_over_blogpost_piece_by_piece.py
ai_text_demo/langchain_store_chat_history/: main.py
ai_text_demo/langchain_weaviate/: question_answering_with_sources.py  similarity_search.py
ai_text_demo/medium_article/: 01_insert_data.py  02_queries.py
ai_text_demo/milvus_search_titles/: 00_data_analysis.py  01_insert_data.py  02_search_title.py  03_query.py  constants.py
ai_text_demo/pdf_read/: main.py
ai_text_demo/weaviate_brick/: 01_insert_data.py  02_queries.py
ai_text_demo/weaviate_quickstart/: 01_insert_data.py  02_queries.py
chatbot-frontend/: .eslintrc.json  package-lock.json  package.json
chatbot-frontend/src/: App.tsx  index.tsx  serviceWorkerRegistration.ts
chatbot-frontend/src/components/: AnswerFetcher.tsx  MyChatBot.tsx
